# EvermemCompetition-Spiro

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  opencode.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
DataExtraction/: demo_output.json  extract_transcript.py
Dataset/: README.md
agent/: README.md  __init__.py  cli.py  config.py  setup_mcp.py
agent/tasks/: __init__.py  base.py  event_cards.py  profiling.py  relationships.py  suggestions.py  timeline.py
app_demo/: README.md  types.ts
app_demo/data/: diaries.json  meta.json  people.json
backup/: backup_meta.json
backup/mongodb_dump/: behavior_histories.metadata.json  cluster_states.bson  cluster_states.metadata.json  conversation_metas.bson  conversation_metas.metadata.json  conversation_status.bson  conversation_status.metadata.json  core_memories.metadata.json  entities.metadata.json  episodic_memories.metadata.json  (+10 more)
codex_agent/: cli.py  config.py  runner.py
data/: README.md  last100_events.json
mcp_server/: README.md  server.py
pipeline/: .env.example  README.md  convert_to_gcf.py  extract_transcript.py  generate_speaker_mapping.py  ingest_data.py  ingest_gcf.py  transcript_parser.py
scripts/: backup_restore.sh  convert_to_gcf.py  evermemos_api.py  export_demo_data.py  ingest_data.py  mock_speakers.py  normalize_speakers.py  transcript_parser.py
shared/: README.md  evermemos_api.py
tests/: test_base_task.py  test_cli.py  test_config.py  test_convert_to_gcf.py  test_evermemos_api.py  test_runner.py  test_tasks.py  test_transcript_parser.py
(+23 files in other folders)
