[project]
name = "evermemos-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
evermemos-agent = "agent.cli:main"

[tool.setuptools.packages.find]
include = ["agent*", "mcp_server*", "pipeline*", "shared*"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["EverMemOS", "opencode"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
